# pyFIA

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
fia/: __init__.py  clip.py  data_io.py  design.py  estimators.py  mog.py
fia_mog/: __init__.py  auxiliary.py  crosswalk.py  engine.py  estimators.py  paths.py
fia_mog/northern/: __init__.py  core.py  diagnostics.py  og_dispatch.py  veg_east_mt.py  veg_idaho.py  veg_west_mt.py
fia_mog/pnw/: __init__.py  evaluate.py  helpers.py  mature.py  ogsi_inside.py  ogsi_outside.py  paz.py  spatial.py
fia_mog/psw/: __init__.py  evaluate.py
fia_mog/southwest/: __init__.py  core.py  diagnostics.py  evaluate.py
mog_auxillary/: FUNCTION_mapMOG.R  utility.v9-5_2024-10_Natl_MasterTreeSpeciesList.csv
mog_auxillary/tutorial_Olympic/: OlympicNF.dbf  OlympicNF.shp  OlympicNF.shx
mog_auxillary/utility_MTcontDivide/: utility_MTcontDivide.dbf  utility_MTcontDivide.shp  utility_MTcontDivide.shx
mog_auxillary/utility_NWFPboundary/: NWFPboundary.dbf  NWFPboundary.shp  NWFPboundary.shx
mog_auxillary/utility_ORcounties/: counties.dbf  counties.shp  counties.shx
mog_auxillary/utility_USA/: tl_2020_us_state.dbf  tl_2020_us_state.shx
mog_auxillary/utility_ecoregions/: USA_ecoregions.dbf  USA_ecoregions.shx
scripts/: plot_cond_structure_metrics.py  test_area.py  test_mog.py  test_mog_area.py  test_mog_area_mt.py
tests/: test_cond_height_percentiles.py  test_cond_mean_crown_ratio.py  test_custom_pse_area_match.py  test_fiadb_column_normalization.py  test_read_fia_sqlite.py  test_read_fia_states.py  test_rfia_montana.py  test_southwest_og_flag.py  test_southwest_sdi_rmrs.py  test_tpa_by_cond.py
