[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fia_py"
version = "0.1.0"
description = "Python port of the rFIA package for working with the USFS Forest Inventory and Analysis (FIA) database."
authors = [
  { name = "Ported from rFIA"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas[pyarrow]>=1.5",
  "requests>=2.31",
  "tqdm>=4.66",
  "geopandas>=0.14",
  "rasterio>=1.3",
]

[tool.setuptools]
packages = ["fia", "fia_mog", "fia_mog.northern", "fia_mog.pnw", "fia_mog.psw", "fia_mog.southwest"]

[project.urls]
Homepage = "https://github.com/doserjef/rFIA"

[tool.pytest.ini_options]
markers = [
    "integration: needs network and/or FIADB-API (see tests/test_rfia_montana.py)",
]

